force-app/main/default/objects/Items_And_Delegated_Items_Settings__c/Items_And_Delegated_Items_Settings__c.object-meta.xml
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <description>Settings for Items And Delegated Items To Approve</description>
    <label>Items And Delegated Items To Approve</label>
</CustomObject>