force-app/main/default/objects/Items_And_Delegated_Items_Settings__c/fields/Disable_Bulk_Approve_and_Reject__c.field-meta.xml
<CustomField>
    <fullName>Disable_Bulk_Approve_and_Reject__c</fullName>
    <defaultValue>false</defaultValue>
    <description>When checked  does not  allow bulk approve or reject of items</description>
    <inlineHelpText>When checked  does not  allow bulk approve or reject of items</inlineHelpText>
    <label>Disable Bulk Approve and Reject</label>
    <type>Checkbox</type>
</CustomField>