force-app/main/default/objects/Items_And_Delegated_Items_Settings__c/fields/Disable_Sharing__c.field-meta.xml
<CustomField>
    <fullName>Disable_Sharing__c</fullName>
    <defaultValue>false</defaultValue>
    <description>When checked does not share approval records with delegated user</description>
    <inlineHelpText>When checked does not share approval records with delegated user</inlineHelpText>
    <label>Disable Sharing</label>
    <type>Checkbox</type>
</CustomField>