force-app/main/default/objects/Items_And_Delegated_Items_Settings__c/fields/Require_Comments__c.field-meta.xml
<CustomField>
    <fullName>Require_Comments__c</fullName>
    <defaultValue>false</defaultValue>
    <description>When checked requires comments when approving or rejecting items</description>
    <inlineHelpText>When checked requires comments when approving or rejecting items</inlineHelpText>
    <label>Require Comments</label>
    <type>Checkbox</type>
</CustomField>