force-app/main/default/objects/Items_And_Delegated_Items_Settings__c/fields/Sharing_Extension__c.field-meta.xml
<CustomField>
    <fullName>Sharing_Extension__c</fullName>
    <description>Name of the apex class implementing the callable extension to find or create sharing records by record id and user id</description>
    <inlineHelpText>Name of the apex class implementing the callable extension to find or create sharing records by record id and user id</inlineHelpText>
    <label>Sharing Extension</label>
    <length>120</length>
    <type>Text</type>
</CustomField>