force-app/main/default/objects/Items_And_Delegated_Items_Settings__c/fields/Show_Delegated_Items_Only__c.field-meta.xml
<CustomField>
    <fullName>Show_Delegated_Items_Only__c</fullName>
    <defaultValue>false</defaultValue>
    <description>When checked only shows the delegated items to approve.</description>
    <inlineHelpText>When checked only shows the delegated items to approve.</inlineHelpText>
    <label>Show Delegated Items Only</label>
    <type>Checkbox</type>
</CustomField>